# Atlas

./: AUTHORS  CMakeLists.txt  COPYING.lfs  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  README.TESTS  README.md  README_ZH.md  aclocal.m4  autogen.sh  bootstrap.sh  build_for_cmake.sh  config.h  config.h.cmake  config.h.in  configure  configure.in  example.cnf  mysql-chassis.pc  mysql-chassis.pc.cmake  mysql-chassis.pc.in  mysql-proxy.cnf  mysql-proxy.json  mysql-proxy.pc  mysql-proxy.pc.cmake  mysql-proxy.pc.in  mysql-proxy.spec  mysql-proxy.spec.in  winbuild.bat
doc/: Makefile.am  Makefile.in  architecture-overview.dot  architecture.dot  architecture.txt  chassis.txt  core.txt  lifecycle.msc  lua-classes.dot  plugins.txt  protocol.txt  scripting.txt  tests.txt
doc/chapter/: Makefile.am  Makefile.in  protocol.txt  scripting.txt
examples/: CMakeLists.txt  Makefile.am  Makefile.in  tutorial-basic.lua  tutorial-constants.lua  tutorial-inject.lua  tutorial-keepalive.lua  tutorial-monitor.lua  tutorial-packets.lua  tutorial-prep-stmts.lua  tutorial-query-time.lua  tutorial-resultset.lua  tutorial-rewrite.lua  tutorial-routing.lua  tutorial-scramble.lua  tutorial-states.lua  tutorial-tokenize.lua  tutorial-union.lua  tutorial-warnings.lua
lib/: CMakeLists.txt  Makefile.am  Makefile.in  active-queries.lua  active-transactions.lua  admin-bak.lua  admin-sql.lua  admin.lua  analyze-query.lua  auditing.lua  chassis.c  chassis.def  chassis_la-chassis.lo  commit-obfuscator.lua  commit-obfuscator.msc  crc32-lua.c  crc32.c  crc32.h  crc32_la-crc32-lua.lo  crc32_la-crc32.lo  glib2.c  glib2.def  glib2_la-glib2.lo  histogram.lua  lfs.c  lfs.def  lfs.la  lfs_la-lfs.lo  load-multi.lua  lpeg.c  lpeg.def  lpeg.la  lpeg_la-lpeg.lo  mysql-password.c  mysql-proto.c  mysql.def  mysql_la-mysql-password.lo  mysql_la-mysql-proto.lo  mysql_la-sql-tokenizer-keywords.lo  mysql_la-sql-tokenizer-lua.lo  (+21 more)
lib/proxy/: CMakeLists.txt  Makefile.am  Makefile.in  auth.lua  auto-config.lua  balance.lua  charset.lua  commands.lua  crc32.lua  filter.lua  log.lua  parser.lua  split.lua  test.lua  ticker.lua  tokenizer.lua
lib/proxy/conf/: config.lua
plugins/: CMakeLists.txt  Makefile.am  Makefile.in
plugins/admin/: CMakeLists.txt  Makefile.am  Makefile.in  admin-plugin.c  libadmin_la-admin-plugin.lo
plugins/debug/: CMakeLists.txt  Makefile.am  Makefile.in  debug-plugin.c  libdebug_la-debug-plugin.lo
plugins/proxy/: CMakeLists.txt  Makefile.am  Makefile.in  libproxy_la-proxy-plugin.lo  proxy-plugin.c  proxy-plugin.h
plugins/replicant/: CMakeLists.txt  Makefile.am  Makefile.in  libreplicant_la-replicant-plugin.lo  replicant-plugin.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  chassis-event-thread.c  chassis-event-thread.h  chassis-exports.h  chassis-filemode.c  chassis-filemode.h  chassis-frontend.c  chassis-frontend.h  chassis-gtimeval.c  chassis-gtimeval.h  chassis-keyfile.c  chassis-keyfile.h  chassis-limits.c  chassis-limits.h  chassis-log.c  chassis-log.h  chassis-mainloop.c  chassis-mainloop.h  chassis-options.c  chassis-options.h  chassis-path.c  chassis-path.h  chassis-plugin.c  chassis-plugin.h  chassis-sharding.c  chassis-sharding.h  chassis-shutdown-hooks.c  chassis-shutdown-hooks.h  chassis-stats.c  chassis-stats.h  chassis-timings.c  chassis-timings.h  chassis-unix-daemon.c  chassis-unix-daemon.h  chassis-win32-service.c  chassis-win32-service.h  disable-dtrace.h  glib-ext-ref.c  (+104 more)
tests/suite/: CMakeLists.txt  Makefile.am  Makefile.in  lua-tests-wrapper.sh.in  lua_runner.c  run-tests.lua
tests/suite/base/: Makefile.am  Makefile.in  tests_to_skip.lua
tests/suite/base/r/: Makefile.am  Makefile.in  bug_30867.result  bug_35669.result  bug_35729.result  bug_41991.result  bug_43078.result  bug_45167.result  bug_46141.result  bug_55459.result  bug_61998.result  chain1.result  change_user.result  client_address.result  constants.result  error_struct.result  failover.result  ignore-resultset.result  lineno.result  load-data-infile.result  load_multi.result  mysql-40.result  overlong.result  pooling.result  raw_packets.result  resultset.result  select_affected_rows.result  select_null.result  tokens-normalize.result  tokens1.result  tokens2.result  xtab1.result  xtab2.result
tests/suite/base/t/: Makefile.am  Makefile.in  bug_30867.lua  bug_30867.options  bug_30867.test  bug_35669-mock.lua  bug_35669-test.lua  bug_35669.options  bug_35669.test  bug_35729-mock.lua  bug_35729-test.lua  bug_35729.options  bug_35729.test  bug_41991-mock.lua  bug_41991-test.lua  bug_41991.options  bug_41991.test  bug_43078-mock.lua  bug_43078-test.lua  bug_43078.options  bug_43078.test  bug_45167-mock.lua  bug_45167-test.lua  bug_45167.options  bug_45167.test  bug_46141-mock.lua  bug_46141-test.lua  bug_46141.options  bug_46141.test  bug_55459-mock.lua  bug_55459-test.lua  bug_55459.options  bug_55459.test  bug_61998.test  chain1.options  chain1.test  chain1a.lua  chain1b.lua  change_user.lua  (+65 more)
tests/suite/bugs/: Makefile.am  Makefile.in
tests/unit/: CMakeLists.txt  Makefile.am  Makefile.in  Session.vim  atlas_test_chassis-stats.c  atlas_test_chassis_sharding.c  atlas_test_chassis_sharding_lemon.c  atlas_test_glib-ext.c  atlas_test_network-conn-pool.c  check_chassis_filemode.c  check_chassis_log.c  check_chassis_path.c  check_loadscript.c  check_mysqld_proto.c  check_plugin.c  check_sql_tokenizer.c  sql-tokenizer.c  t_chassis_frontend.c  t_chassis_shutdown_hooks.c  t_chassis_timings.c  t_network_address.c  t_network_backend.c  t_network_injection.c  t_network_mysqld_masterinfo.c  t_network_mysqld_packet.c  t_network_mysqld_type.c  t_network_queue.c  t_network_socket.c
tests/unit/lua/: CMakeLists.txt  Makefile.am  Makefile.in  active-queries.lua  chassis.lua  lua-tests-wrapper.sh.in  mysql-proto.lua  proxy-auto-config.lua  proxy-commands.lua  proxy-parser.lua  proxy-test.lua  proxy-tokenizer.lua
util/: CMakeLists.txt  id_generator.c  id_generator.h  id_generator_local.c  id_generator_local.h  mysql-proxy.json  parse_config_file.c  parse_config_file.h  save_config_file.c  save_config_file.h  tags
(+43 files in other folders)
